--- a/index.html
+++ b/index.html
@@ -1,12 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <title>pagina web 3</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="menu">
+          <a href="#" class="logo">Logo</a>
+          <input type="checkbox" id="menu" />
+          <label for="menu">
+            <img src="images/menu.png" alt="" class="menu-icono" />
+          </label>
+          <nav class="navbar">
+            <ul>
+              <li><a href="#">Inicio</a></li>
+              <li><a href="#">Servicios</a></li>
+              <li><a href="#">Productos</a></li>
+              <li><a href="#">Contactos</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="header-content">
+          <div class="header-txt">
+            <h1>Compra tu carro <br />favorito aqui</h1>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Provident saepe rerum obcaecati magnam pariatur maxime vitae
+              quibusdam velit, maiores alias, fugit voluptatem esse iste quasi
+              ipsa reprehenderit id quidem vel.
+            </p>
+            <a href="#" class="btn-1">Informacion</a>
+          </div>
+          <div class="header-img"><img src="images/right.png" alt="" /></div>
+        </div>
+      </div>
+    </header>
+    <section class="services container">
+      <h2>Nuestros Servicios</h2>
+      <div class="services-content">
+        <div class="services-1">
+            <img src="images/i1.svg" alt="" />
+            <h3>Seminuevo</h3>
+          <p>Muchas versiones han evolucionado a traves de los anos</p>
+        </div>
+        <div class="services-1">
+            <img src="images/i2.svg" alt="" />
+            <h3>Credito</h3>
+          <p>Muchas versiones han evolucionado a traves de los anos</p>
+        </div>
+        <div class="services-1">
+            <img src="images/i3.svg" alt="" />
+            <h3>Garantia</h3>
+          <p>Muchas versiones han evolucionado a traves de los anos</p>
+        </div>
+        
+      </div>
+    </section>
+  </body>
 </html>
