indel html inicio del css

--- a/index.html
+++ b/index.html
@@ -43,22 +43,96 @@
       <h2>Nuestros Servicios</h2>
       <div class="services-content">
         <div class="services-1">
-            <img src="images/i1.svg" alt="" />
-            <h3>Seminuevo</h3>
+          <img src="images/i1.svg" alt="" />
+          <h3>Seminuevo</h3>
           <p>Muchas versiones han evolucionado a traves de los anos</p>
         </div>
         <div class="services-1">
-            <img src="images/i2.svg" alt="" />
-            <h3>Credito</h3>
+          <img src="images/i2.svg" alt="" />
+          <h3>Credito</h3>
           <p>Muchas versiones han evolucionado a traves de los anos</p>
         </div>
         <div class="services-1">
-            <img src="images/i3.svg" alt="" />
-            <h3>Garantia</h3>
+          <img src="images/i3.svg" alt="" />
+          <h3>Garantia</h3>
           <p>Muchas versiones han evolucionado a traves de los anos</p>
         </div>
-        
       </div>
     </section>
+    <main class="products container">
+      <h2>Carros</h2>
+      <div class="products-content">
+        <div class="products-1">
+          <img src="images/j1.png" alt="" />
+          <h4>Jeep</h4>
+          <p>$100</p>
+          <a href="#" class="btn-1">Informacion</a>
+        </div>
+        <div class="products-1">
+          <img src="images/j2.png" alt="" />
+          <h4>Jeep</h4>
+          <p>$100</p>
+          <a href="#" class="btn-1">Informacion</a>
+        </div>
+        <div class="products-1">
+          <img src="images/j3.png" alt="" />
+          <h4>Jeep</h4>
+          <p>$100</p>
+          <a href="#" class="btn-1">Informacion</a>
+        </div>
+        <div class="products-1">
+          <img src="images/j4.png" alt="" />
+          <h4>Jeep</h4>
+          <p>$100</p>
+          <a href="#" class="btn-1">Informacion</a>
+        </div>
+        <div class="products-1">
+          <img src="images/j5.png" alt="" />
+          <h4>Jeep</h4>
+          <p>$100</p>
+          <a href="#" class="btn-1">Informacion</a>
+        </div>
+        <div class="products-1">
+          <img src="images/j6.png" alt="" />
+          <h4>Jeep</h4>
+          <p>$100</p>
+          <a href="#" class="btn-1">Informacion</a>
+        </div>
+      </div>
+    </main>
+    <section class="testimonio container">
+      <h2>Testimonios</h2>
+      <div class="testimonio-content">
+        <div class="testimonio-1">
+          <img src="images/t1.jpg" alt="" />
+          <h3>Lorem</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis
+            magni facere temporibus totam ut. Facere illum quis quibusdam ipsam
+            numquam cum, sunt nisi tenetur totam et dolore vel odio non?
+          </p>
+        </div>
+        <div class="testimonio-1">
+          <img src="images/t2.jpg" alt="" />
+          <h3>Lorem</h3>
+          <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Omnis
+            magni facere temporibus totam ut. Facere illum quis quibusdam ipsam
+            numquam cum, sunt nisi tenetur totam et dolore vel odio non?
+          </p>
+        </div>
+      </div>
+    </section>
+    <footer class="footer-container">
+      <div class="footer-content">
+        <a href="" class="logo">Logo</a>
+        <ul>
+          <li><a href="#">Inicio</a></li>
+          <li><a href="#">Servicios</a></li>
+          <li><a href="#">Productos</a></li>
+          <li><a href="#">Contactos</a></li>
+        </ul>
+      </div>
+    </footer>
   </body>
 </html>
