--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
       </div>
     </section>
-    <footer class="footer-container">
+    <footer class="footer container">
       <div class="footer-content">
         <a href="" class="logo">Logo</a>
         <ul>
